2.0.47 - Fixed style issue on mobile devices.

--- a/css/global.css
+++ b/css/global.css
@@ -429,6 +429,8 @@ nav section > ul > li:hover ul {
 .wrap {
 	margin: 40px 0;
 	text-align: justify;
+	word-break: break-all;
+	word-wrap: break-word;
 }
 
 .wrap a:not(.btn):link, .wrap a:not(.btn):visited {
